# nostrsocial.app.OC-python.src

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: trust_tiers.py
src/nostrsocial/: __init__.py  behavior.py  contacts.py  enclave.py  evaluate.py  guardrails.py  proxy.py  resonance.py  storage.py  types.py  verify.py
src/nostrsocial/data/: banned_entities.json  banned_topics.json  banned_words.json
tests/: test_behavior.py  test_contacts.py  test_enclave.py  test_evaluate.py  test_guardrails.py  test_proxy.py  test_resonance.py  test_storage.py  test_types.py
